# BestYOLO

./: README.md  train.py  train_AuxOTA.py  val.py  wbf.py
deploy/fog_augment/: fog_augment.py  synthetic_fog.py
deploy/gui/dialog/: rtsp_dialog.py  rtsp_dialog.ui
deploy/yolov5_TensorRT/: CMakeLists.txt  README.md
deploy/yolov5_TensorRT/include/: common.h  yolov5.h
deploy/yolov5_TensorRT/src/: main.cpp  yolov5.cpp
deploy/yolov5_maketools/: app.py  打包.txt
deploy/yolov5_maketools/demo/ann/: 0903.xml  0904.xml  0905.xml  0908.xml  0909.xml  0910.xml  0911.xml  0912.xml  0913.xml  0914.xml  0915.xml  0916.xml  (+7 more)
deploy/yolov5_multi-lable/: ml_detect.py  ml_loss.py  ml_train.py
deploy/yolov5_tfjs_flask/: README.md  server.py
deploy/yolov5_tfjs_flask/templates/: index.html
docs/: wbf.md
models/: common.py  yolo.py
models/Attention/Self/: yolov5n-FPN+PAN-AC.yaml  yolov5n-FPN+PAN-AS.yaml  yolov5n-FPN-AC.yaml  yolov5n-FPN-AS.yaml  yolov5n-PAN-AC.yaml  yolov5n-PAN-AS.yaml
models/SPP/: yolov5n-ASPP.yaml  yolov5n-RFB.yaml  yolov5n-SPP.yaml  yolov5n-SPPCSPC.yaml  yolov5n-SPPCSPC_group.yaml  yolov5n-SimCSPSPPF.yaml  yolov5n-SimSPPF.yaml
models/backbone/: MobileNetV3s.yaml  RegNety400.yaml  convnext_tiny.yaml  efficientnet_b0.yaml  efficientnet_b1.yaml  efficientnet_v2_s.yaml  mobilenet_v2.yaml  resnet18.yaml  resnet34.yaml  resnet50.yaml  vgg11_bn.yaml  wide_resnet50_2.yaml  yolov5n-DCN.yaml
models/loss/: yolov5n_auxota.yaml
models/ops_dcnv3/: README.md
utils/: general-softnms.py  loss_AuxOTA.py  loss_OTA.py
utils/tools/: check_torchvision_model.ipynb
(+9 files in other folders)
